open-policy-agent/open-policy-agent/policy/gen-unique-ingress-host/samples/unique-ingress-host/ingress_allowed_pattern.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-allowed-pattern
  namespace: istio-system
spec:
  servers:
  - hosts:
    - esco.nonprod.westus.aks.az.albertsons.com
    port:
      name: https-ingressgateway
      number: 443
      protocol: HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - esco.nonprod.westus.aks.az.albertsons.com
    port:
      name: http-ingressgateway
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
