open-policy-agent/open-policy-agent/policy/gen-unique-ingress-host/samples/unique-ingress-host/ingress_disallowed_pattern.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name:  ingress-disallowed-pattern
  namespace: istio-system
spec:
  servers:
  - hosts:
    - esco.nonprod.aks.az.albersons.c
    port:
      name: http-ingressgateway
      number: 443
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - example-host.example.com
    port:
      name: https-ingressgateway
      number: 443
      protocol: HTTPS
    tls:
      httpsRedirect: true
